# rTODO

./: .gitignore  LICENSE
.github/workflows/: main.yml
services/todo_api/: initialize_db.py  pyproject.toml  test.db  todo.db
services/todo_api/fastapi_todo/: config.py  crud.py  database.py  main.py  models.py  schemas.py
services/todo_api/tests/: test_main.py
