[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Kevin Rogala <krrogala@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
sqlalchemy = {extras = ["async"], version = "^2.0.22"}
aiosqlite = "^0.19.0"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
isort = "^5.12.0"
bandit = "^1.7.5"
black = "^23.10.1"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
